#4165 - cms page on mobile was stretching beyond viewport because of its content, fixed

--- a/packages/scandipwa/src/route/CmsPage/CmsPage.style.scss
+++ b/packages/scandipwa/src/route/CmsPage/CmsPage.style.scss
@@ -19,6 +19,11 @@
     }
 
     &-Content {
+        @include mobile {
+            max-width: 100%;
+            overflow-x: hidden;
+        }
+
         h2 {
             @include mobile {
                 text-align: center;
@@ -109,7 +114,7 @@
     .widget {
         overflow-x: auto;
     }
-    
+
     ul,
     ol {
         li {
